<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScanPetActivity"
    android:background="@color/white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_scan"
            android:layout_width="330dp"
            android:layout_height="55dp"
            app:backgroundTint="@color/secondaryColor"
            android:text="@string/scan_now"
            android:textColor="@color/white"
            android:layout_below="@id/btn_scan"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>
    <View
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/appbar"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textscanpet"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="@string/scan_pet_disease"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>



    <ImageView
        android:layout_below="@id/appbar"
        android:id="@+id/image_scan_result"
        android:layout_width="300dp"
        android:layout_height="310dp"
        tools:src="@drawable/baseline_insert_photo_24"
        android:visibility="visible"
        android:contentDescription="@string/image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/border"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_below="@id/image_scan_result"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/secondaryColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/disease_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_result"
        android:layout_below="@id/tv_result"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/secondaryColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_below="@id/disease_result"
        android:layout_marginStart="140dp"
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryColor"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btnScan"
        android:src="@drawable/baseline_camera_alt_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn_scan"
        android:layout_alignTop="@id/btn_scan"
        android:backgroundTint="@color/secondaryColor"
        android:layout_marginStart="90dp"
        android:contentDescription="@string/btnScan"
        android:src="@drawable/baseline_image_24"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>