<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/secondaryLightColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryLightColor"
        android:layout_margin="20dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <View
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="845dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle"  />

        <ImageView
            android:id="@+id/logohuggingpet"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/logohuggingpet"
            android:layout_centerHorizontal="true"
            app:fontFamily="@font/poppins_bold"
            android:text="@string/registHeader"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/layout_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tvRegister"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.bangkit.huggingpet.customeview.NameCV
                android:padding="12dp"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/layout_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/layout_name"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.bangkit.huggingpet.customeview.EmailCV
                android:padding="12dp"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/layout_email"
            android:hint="@string/passwordhint"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.bangkit.huggingpet.customeview.PasswordCV
                android:padding="12dp"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/ispasswordsame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/layout_password"
            android:hint="@string/passwordsame"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.bangkit.huggingpet.customeview.IsPasswordSameCV
                android:padding="12dp"
                android:id="@+id/input_passwordsame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_below="@id/ispasswordsame"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_button"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/secondaryColor" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            android:text="@string/login_button"
            app:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textColor="@color/secondaryColor" />

    </RelativeLayout>
</ScrollView>